# Sharnn

./: .clang-format  .gitignore  Bitset.hpp  ByteStream.hpp  CMakeLists.txt  ChaoticMap.hpp  PaddedStream.hpp  RNN.hpp  SpongeFunction.cpp  SpongeFunction.h  SpongeFunction.hpp  SpongeHash.hpp  TODO  b  bitstream.hpp  define.h  main.c  main.cpp  readme.md  run.sh  t1  t2  util.cpp  util.hpp
.github/workflows/: cmake.yml
include/: define.h
python/: RNN_base.py
src/: Bitset.hpp  ByteStream.hpp  ChaoticMap.hpp  ChaoticSystem.hpp  NonLinear.hpp  PaddedStream.hpp  RNN.hpp  RNNHash.hpp  SpongeFunction.hpp  SpongeHash.hpp  define.h  main.cpp  testbench.cpp  util.hpp
statistics/: Makefile  analyze.ipynb  assess  defines.h  diffusion.cpp  diffusion.out  eval.py  main  sample.cpp  test_zero.cpp  text.in
test/: base.txt  test1.cpp  test2.cpp  test3  test3.cpp  test4.cpp  test_diffusion.cpp
