cmake_minimum_required(VERSION 2.8.11)
project(SHA-RNN)

IF (NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Release)
ENDIF ()

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

SET(SOURCES
        src/main.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

ADD_EXECUTABLE(testbench src/testbench.cpp)